setenv() and unsetenv() implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_definitions(-DBOOST_TEST_DYN_LINK)
 
 bunsan_add_shared_library(${PROJECT_NAME}
     src/getenv.cpp
+    src/setenv.cpp
     src/environment.cpp
 
     src/filesystem/tempdir.cpp
