filesystem::tempfiles implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ bunsan_add_shared_library(${PROJECT_NAME}
     src/environment.cpp
 
     src/filesystem/tempdir.cpp
+    src/filesystem/tempfiles.cpp
     src/filesystem/read_data.cpp
     src/filesystem/write_data.cpp
 )
