Migration to CMake packages.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,9 @@ project(bunsan_testing)
 
 include(${CMAKE_SOURCE_DIR}/system-config.cmake OPTIONAL)
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 
-include(BunsanCommon)
-
-# BOOST
-bunsan_use_boost(system filesystem unit_test_framework)
-add_definitions(-DBOOST_TEST_DYN_LINK)
+find_package(BunsanCMake CONFIG REQUIRED)
 
 bunsan_add_shared_library(${PROJECT_NAME}
     src/getenv.cpp
@@ -21,9 +17,15 @@ bunsan_add_shared_library(${PROJECT_NAME}
     src/filesystem/read_data.cpp
     src/filesystem/write_data.cpp
 )
+target_compile_definitions(${PROJECT_NAME} PUBLIC BOOST_TEST_DYN_LINK)
+bunsan_use_package(${PROJECT_NAME} Boost
+    system
+    filesystem
+    unit_test_framework
+)
 
 bunsan_install_headers()
 bunsan_install_targets(${PROJECT_NAME})
-bunsan_install_plugins(BunsanCmake)
+bunsan_install_project()
 
 bunsan_include_tests()
